--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -43,41 +43,41 @@
 @import "utilities";
 @import "print";
 
-
 .brand-text-icon {
-    font-size: 20px;
-    font-weight: 500;
-    font-family: "poppins", sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  font-family: "poppins", sans-serif;
+  color: $primary;
+  &:hover {
     color: $primary;
-    &:hover{
-        color: $primary;
-        text-decoration: none;
-    }
+    text-decoration: none;
+  }
 }
 
 header {
-    border-bottom: 1px solid $gray-200;
-    width: 100%;
-    position: relative;
+  border-bottom: 1px solid $gray-200;
+  width: 100%;
+  position: relative;
+  margin-bottom: 50px;
 
-    ul.navbar-nav{         
-        li.nav-item {
-            &.active{
-                a.nav-link{
-                    color: $primary;
-                } 
-            }         
-            a {
-                &.nav-link{
-                    letter-spacing: 1px;
-                    color: $gray-900;
-                    padding-left: 1rem;
-                    padding-right: 1rem;
-                    &:hover{
-                        text-decoration: underline;
-                    }
-                }
-            }
+  ul.navbar-nav {
+    li.nav-item {
+      &.active {
+        a.nav-link {
+          color: $primary;
         }
+      }
+      a {
+        &.nav-link {
+          letter-spacing: 1px;
+          color: $gray-900;
+          padding-left: 1rem;
+          padding-right: 1rem;
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
     }
+  }
 }
